added lots of comments to the css code

--- a/code/index.html
+++ b/code/index.html
@@ -11,26 +11,26 @@
 <body>
   <header>
     <div class="header-wrapper">
-    <nav>
-      <input type="checkbox" id="checkbox" >
-      <label for="checkbox"><a class="menu-button"></a>
-      </label>
-      <div class="menu-content"> 
-        <a href="contacts.html" target="blank">contact</a>
-        <a href="about.html" target="blank">about</a>
-        <a href="signup.html" target="blank">sign up</a>
-        <a href="login.html" target="blank">login</a>
-      </div>
-      <div class="search-content">
-      <input type="checkbox" id="searchbox" >
-      <label for="searchbox">
-        <img class="search-button" src="../pictures/magnify.png">
-      </label>
-      <div class="searchbar">
-        <input type="text" placeholder="Search..">
-      </div>
-    </div>
-    </nav>
+      <nav>
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox"><a class="menu-button"></a>
+        </label>
+        <div class="menu-content">
+          <a href="contacts.html" target="blank">contact</a>
+          <a href="about.html" target="blank">about</a>
+          <a href="signup.html" target="blank">sign up</a>
+          <a href="login.html" target="blank">login</a>
+        </div>
+        <div class="search-content">
+          <input type="checkbox" id="searchbox">
+          <label for="searchbox">
+            <img class="search-button" src="../pictures/magnify.png">
+          </label>
+          <div class="searchbar">
+            <input type="text" placeholder="Search..">
+          </div>
+        </div>
+      </nav>
       <div class="meteor"></div>
       <h1>SPACE NEWS</h1>
   </header>
@@ -45,7 +45,7 @@
         <br>
         <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque nobis quas rerum. Eligendi quo vero,
         iusto fugiat, tempore, possimus sunt tempora cumque maxime minus a porro esse! Aspernatur, voluptates.<br><br>
-        <a href="" target="blank">&gt; Keep reading &lt;</a>
+        <a href="https://www.nasa.gov/" target="blank">&gt; Keep reading &lt;</a>
       </p>
     </container>
   </section>
@@ -57,12 +57,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>NASA test-fires SLS engines</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
-          <a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>NASA test-fires SLS engines</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br><br>
+        <a href="a" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -70,12 +68,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Astronaut William Thornton dead</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
-          <a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Astronaut William Thornton dead</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br><br>
+        <a href="b" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -83,12 +79,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><br><a href="c" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -96,12 +90,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat <br><a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat <br><br><a href="d" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -109,12 +101,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat, quibusdam <br><br><a href="e" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -122,12 +112,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat, quibusdam <br><br><a href="f" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -135,12 +123,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>NASA test-fires SLS engines</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
-          <a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>NASA test-fires SLS engines</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br><br>
+        <a href="g" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -148,12 +134,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Astronaut William Thornton dead</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
-          <a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Astronaut William Thornton dead</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br><br>
+        <a href="h" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -161,12 +145,10 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><br><a href="i" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -174,51 +156,40 @@
       </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat <br><a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat <br><br><a href="j" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
         <img src="../pictures/ISS640px.jpg">
-      </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat, quibusdam <br><br><a href="k" target="blank">More -&gt;</a>
+      </p>
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
         <img src="../pictures/columbia.jpg">
-      </container>
     </div>
     <div class="grid-wrapper">
-      <container class="small-text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">More -&gt;</a>
-        </p>
-      </container>
-    </div>
-    <a class="top-button" href="#top">^<br>^</a>
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat, quibusdam <br><br><a href="l" target="blank">More -&gt;</a>
+      </p>
+      <a class="top-button" href="#top">^<br>^</a>
   </section>
 
   <footer>
     <div class="footer-wrapper">
-      <contaier class="footer-text-container">
-        <p>&copy; Pauline Andersson 2021</p>
-      </contaier>
+      <p>&copy; Pauline Andersson 2021</p>
       <container class="footer-img-container">
         <img src="../pictures/logo.svg">
-      </contaier>
-  </div >
+        </contaier>
+    </div>
   </footer>
 </body>
 
