Styled sections, added figcaption google font

--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,8 @@
     <title>Crafty Ideas E-zine</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -30,21 +32,24 @@
     <section class="big-news">
       <!-- The big news content -->
 
-      <article>
+      
         <figure class="big-news">
           <img class="big-news" src="/images/60s-embroidery.jpg" alt="60's Embroidery">
-          <figcaption>"60's Embroidery &mdash; a Splash of Color"</figcaption>
+          <figcaption>"60's Embroidery &#8211; a Splash of Color"</figcaption>
         </figure>
 
+        <article> 
         I found this genuine 60's embroidery kit in my grandmothers basement 
         after she passed away. I was in awe by the bright colors and asked 
         my mom if I could have it. The 1960's patterns are perfect if you enjoy 
         a retro touch in your home and some fun color combinations. 
         You can try visiting flea markets or search the second-hand webshops 
-        for original embroidery kits. Another &mdash; perhaps easier &mdash; 
+        for original embroidery kits. Another &#8211; perhaps easier &#8211; 
         way is to look for 1960's needlework or embroidery books and then collect 
         the required material on your own. 
-      </article>
+        </article>
+
+      
     </section>
 
     <section class="small-news">
@@ -66,7 +71,7 @@
 
       <figure class="small-news">
         <img class="small-news" src="/images/mobknitting.jpg" alt="Mob knitted scarf">
-        <figcaption>Mob Knitting &mdash; the New Trend</figcaption>
+        <figcaption>Mob Knitting &#8211; the New Trend</figcaption>
       </figure>
 
       <figure class="small-news">
