Added big news phot and updated css styling

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <img class="logo" src="./star.svg" alt="Alva logo"> <!-- add img src -->
-        <h1>A L V A</h1>
+        <h1>ALVA</h1>
         <nav> 
             <a href="#">About</a>
             <a href="#">Archive</a>
@@ -24,7 +24,7 @@
           <div></div>
         </div>
         <div class="social-media">
-          <a href="#"><img src="./facebook.svg" alt="Facebook"></a>
+          <a href="#"><img src="./facebook.svg" alt="Facebook"></a> <!-- maybe but a class in each of this to regulate the space between them? -->
           <a href="#"><img src="./instagram.svg" alt="Instagram"></a>
           <a href="#"><img src="./youtube.svg" alt="Youtube"></a>
         </div>
@@ -32,9 +32,10 @@
 
     <section class="big-news">
       <section class="big-news-container">
-        <img class="big-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
+        <img class="responsive-image" src="alva-wet.jpg" alt="Alva getting wet"> <!-- set alt to the image once image src is in place -->
         <div class="big-news-text">
-          <h2>Inside the head of Alva</h2>
+          <h2>Looking back</h2>
+          <p>2020 - Year of the dog</p>
         </div>
       </section>
     </section>
@@ -75,25 +76,23 @@
     </section>
 
     <footer>
-      <div class="footer">
-        <div class="contact-info">
-          <a href="#">About</a> 
-          <a href="#">Archive</a>
-          <a href="#">Contact</a>
-          <a href="#">
-            <img src="./facebook.svg" alt="Facebook"> 
-            Facebook
-          </a>
-          <a href="#">
-            <img src="./instagram.svg" alt="Instagram"> 
-            Instagram 
-          </a>
-          <a href="#">
-            <img src="./youtube.svg" alt="Youtube"> 
-            Youtube 
-          </a>
-          <a href="mailto:someone@example.com">Email: info@alva.se</a>
-        </div>
+      <div class="contact-info">
+        <a href="#">About</a> 
+        <a href="#">Archive</a>
+        <a href="#">Contact</a>
+        <a href="#">
+          <img src="./facebook.svg" alt="Facebook"> 
+          Facebook
+        </a>
+        <a href="#">
+          <img src="./instagram.svg" alt="Instagram"> 
+          Instagram 
+        </a>
+        <a href="#">
+          <img src="./youtube.svg" alt="Youtube"> 
+          Youtube 
+        </a>
+        <a href="mailto:someone@example.com">Email: info@alva.se</a>
       </div>
     </footer>
 
