--- a/code/index.html
+++ b/code/index.html
@@ -9,102 +9,120 @@
 
   </head>
   <body>
-    <header>
-      <!-- Logo, hamburger menu and navbar -->
-      <div class="header-phone">
-        <img src="./logo.svg" alt="Logo">
-        <div class="checkbox">
-          <input type="checkbox" id="hamburger">
-            <nav class="dropdown">
-              <ul>
-                  <li><a href="">Home</a></li>
-                  <li><a href="">Highlights</a></li>
-                  <li><a href="">News</a></li>
-                  <li><a href="">More</a></li>
-              </ul>
-            </nav>
-          <label for="hamburger">
-            <div></div>
-            <div></div>
-            <div></div>
-          </label>
+    
+      <header>
+        <!-- Logo, hamburger menu and navbar -->
+        <div class="header-phone">
+          <img src="./logo.svg" alt="Logo">
+          <div class="checkbox">
+            <input type="checkbox" id="hamburger">
+              <nav class="dropdown">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Highlights</a></li>
+                    <li><a href="">News</a></li>
+                    <li><a href="">More</a></li>
+                </ul>
+              </nav>
+            <label for="hamburger">
+              <div></div>
+              <div></div>
+              <div></div>
+            </label>
+          </div>
         </div>
-      </div>
-      <div class= "header-desktop">
-        <img src="./logo.svg" alt="Logo">
-        <nav class="nav-desktop">
-          <a href="">Home</a> |
-          <a href="">Highlights</a> |
-          <a href="">News</a> |
-          <a href="">More</a> |
-        </nav>
-      </div>
-      <div class="header-tablet">
-        <nav class="nav-tablet">
-          <a href="">Home</a>
-          <a href="">Highlights</a>
-          <a href= ""> <img src="./logo.svg" alt="Logo"> </a>
-          <a href="">News</a>
-          <a href="">More</a> 
-        </nav>
-      </div>
-    </header>
-
-    <section class="big-news"> <!-- The big news content -->
-      <section class="container">
-        <img src="./logo.svg" alt="Image decription">
-        <div>
-        <h2>Text here</h2>
-        <p>Here will be a short text about our news. Here will be a short text about our news. Here will be a short text about our news</p>
-        <a href="">Read more</a>
+        <div class= "header-desktop">
+          <img src="./logo.svg" alt="Logo">
+          <nav class="nav-desktop">
+            <a href="">Home</a> |
+            <a href="">Highlights</a> |
+            <a href="">News</a> |
+            <a href="">More</a> |
+          </nav>
         </div>
+        <div class="header-tablet">
+          <nav class="nav-tablet">
+            <a href="">Home</a>
+            <a href="">Highlights</a>
+            <a href= ""> <img src="./logo.svg" alt="Logo"> </a>
+            <a href="">News</a>
+            <a href="">More</a> 
+          </nav>
+        </div>
+      </header>
+      <section class="big-news"> <!-- The big news content -->
+        <section class="container">
+          <img src="./logo.svg" alt="Image decription">
+          <div>
+          <h2>Text here</h2>
+          <p>Here will be a short text about our news. Here will be a short text about our news. Here will be a short text about our news</p>
+          <a href="">Read more</a>
+          </div>
+        </section>
       </section>
-    </section>
 
-    <section class="ordinary-news"> <!-- The other news  -->
-      <section class="container">
-        <div class="news">
-          <a href="">
-            <div class="each-news">
-              <img src="./logo.svg" alt="">
-              <div>
-                <h3>Headline text</h3>
-                <p>Here will be a short text about our news. Here will be a short text about our news. </p>
-              </div>
-            </div>  
-          </a>
-          <a href="">
-            <div class="each-news">
-              <img src="./logo.svg" alt="">
-              <div>
-                <h3>Headline text</h3>
-                <p>Here will be a short text about our news. Here will be a short text about our news. </p>
-              </div>
-            </div>  
-          </a>
-          <a href="">
-            <div class="each-news">
-              <img src="./logo.svg" alt="">
-              <div>
-                <h3>Headline text</h3>
-                <p>Here will be a short text about our news. Here will be a short text about our news. </p>
-              </div>
-            </div>  
-          </a>
-          <a href="">
-            <div class="each-news">
-              <img src="./logo.svg" alt="">
-              <div>
-                <h3>Headline text</h3>
-                <p>Here will be a short text about our news. Here will be a short text about our news. </p>
-              </div>
-            </div>  
-          </a>
-        </div>
+      <section class="ordinary-news"> <!-- The other news  -->
+        <section class="container">
+          <div class="news">
+            <a href="">
+              <div class="each-news">
+                <img src="./logo.svg" alt="">
+                <div>
+                  <h3>Headline text</h3>
+                  <p>Here will be a short text about our news. Here will be a short text about our news. </p>
+                </div>
+              </div>  
+            </a>
+            <a href="">
+              <div class="each-news">
+                <img src="./logo.svg" alt="">
+                <div>
+                  <h3>Headline text</h3>
+                  <p>Here will be a short text about our news. Here will be a short text about our news. </p>
+                </div>
+              </div>  
+            </a>
+            <a href="">
+              <div class="each-news">
+                <img src="./logo.svg" alt="">
+                <div>
+                  <h3>Headline text</h3>
+                  <p>Here will be a short text about our news. Here will be a short text about our news. </p>
+                </div>
+              </div>  
+            </a>
+            <a href="">
+              <div class="each-news">
+                <img src="./logo.svg" alt="">
+                <div>
+                  <h3>Headline text</h3>
+                  <p>Here will be a short text about our news. Here will be a short text about our news. </p>
+                </div>
+              </div>  
+            </a>
+          </div>
+        </section>
       </section>
-    </section>
     <footer>
-
+      <div class="about-us">
+        <h4>About us</h4>
+        <ul>
+          <li><a href="">Contact information</a></li>
+          <li><a href="">History</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Coockies</a></li>
+        </ul>
+      </div>
+      <div class="about-us">
+        <h4>About us</h4>
+        <ul>
+          <li><a href="">Contact information</a></li>
+          <li><a href="">History</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Coockies</a></li>
+        </ul>
+      </div>
+   
     </footer>
 
   </body>
