--- a/code/index.html
+++ b/code/index.html
@@ -21,19 +21,44 @@
         </ul>
       </nav>
     </header>
+    <main>
     <section class="cards-container">
       <!--the big news content-->
       <div class="main-article">
         <a href="#">
           <div class="main-article-image">
-            <img src="img/img-0.jpg" alt="succulents image"
+            <img src="img/img-0.jpg" alt="succulents image">
           </div>
           <div class="main-article-text">
             <h1>Main article</h1>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries.</p>
+            <a href="#" class="links">Read More</a>
           </div>
         </a>
       </div>
+    
+
+    <!--  <div>
+      <p class="rubrique">This month</p> 
+      <hr class="line">
+    </div>  -->
+    <section class="other-articles">
+      <!-- The other news  -->
+      <div class="grid-container">
+         
+        <div class="card">
+          <div class="article-1">
+            <a href="#">
+            <img src="./img/img-1.jpg" alt="succulents image">
+            <h1>Article 1</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem debitis nesciunt eum accusamus corrupti voluptates officiis.</p>
+            </a>
+            <a href= "#" class="links">Read more</a>      
+          </div>
+        </div>  
+
     </section>
-    </body>
-  </html>
+
+    </main>
+  </body>
+</html>
