--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Push 2: Project 2: Succulent world</title>
+    <title>Push 4: Project 2: Succulent world</title>
     <link rel="stylesheet" href="./style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
@@ -38,10 +38,11 @@
       </div>
     
 
-    <!--  <div>
+     <div>
       <p class="rubrique">This month</p> 
       <hr class="line">
-    </div>  -->
+    </div> 
+
     <section class="other-articles">
       <!-- The other news  -->
       <div class="grid-container">
@@ -55,8 +56,78 @@
             </a>
             <a href= "#" class="links">Read more</a>      
           </div>
-        </div>  
-
+        </div>
+        <div class="card">
+          <div class="article-2">
+            <a href="#">
+            <img src="./img/img-2.jpg" alt="succulents image">
+            <h1>Article 2</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem debitis nesciunt eum accusamus corrupti voluptates officiis.</p>
+            </a>
+            <a href= "#" class="links">Read more</a>
+          </div>
+        </div>      
+        <div class="card">
+          <div class="article-3">
+            <a href="#">
+            <img src="./img/img-3.jpg" alt="succulents image">
+            <h1>Article 3</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem debitis nesciunt eum accusamus corrupti voluptates officiis.</p>
+            </a>
+            <a href= "#" class="links">Read more</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="article-4">
+            <a href="#">
+            <img src="./img/img-4.jpg" alt="succulents image">
+            <h1>Article 4</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem debitis nesciunt eum accusamus corrupti voluptates officiis.</p>
+            </a>
+            <a href= "#" class="links">Read more</a>
+          </div>
+        </div> 
+        <div class="card">
+          <div class="article-5">
+            <a href="#">
+            <img src="./img/img-5.jpg" alt="succulents image">
+            <h1>Article 5</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem debitis nesciunt eum accusamus corrupti voluptates officiis.</p>
+            </a>
+            <a href= "#" class="links">Read more</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="article-6">
+            <a href="#">
+            <img src="./img/img-6.jpg" alt="succulents image">
+            <h1>Article 6</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem debitis nesciunt eum accusamus corrupti voluptates officiis.</p>
+            </a>
+            <a href= "#" class="links">Read more</a>
+          </div>
+        </div>                 
+        <div class="card">
+          <div class="article-7">
+            <a href="#">
+            <img src="./img/img-7.jpg" alt="succulents image">
+            <h1>Article 7</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem debitis nesciunt eum accusamus corrupti voluptates officiis.</p>
+            </a>
+            <a href= "#" class="links">Read more</a>
+          </div>
+        </div>          
+        <div class="card">
+          <div class="article-8">
+            <a href="#">
+            <img src="./img/img-8.jpg" alt="succulents image">
+            <h1>Article 8</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem debitis nesciunt eum accusamus corrupti voluptates officiis.</p>
+            </a>
+            <a href= "#" class="links">Read more</a>
+          </div>
+        </div>
+      </div>  
     </section>
 
     </main>
