Changed place for footer on each page since it was placed outside of the body. Changed title for each separate html page.

--- a/code/article5.html
+++ b/code/article5.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Article 5</title>
+  <title>Covid-19 one year later</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -34,10 +34,8 @@
     </article>
   </section>
 
+  <footer>
+    <p>Dentnews AB 2021 &copy</p>
+  </footer>  
 </body>
-
-<footer>
-  <p>Dentnews AB 2021 &copy</p>
-</footer>
-
 </html>
