--- a/code/article6.html
+++ b/code/article6.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Article 6</title>
+  <title>Dental traumas and electric scooters</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -34,10 +34,8 @@
     </article>
   </section>
 
-</body>
-
 <footer>
-  <p>Dentnews AB 2021 &copy</p>
+    <p>Dentnews AB 2021 &copy</p>
 </footer>
-
+</body>
 </html>
