--- a/code/article7.html
+++ b/code/article7.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article 7</title>
+    <title>Humble Co</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -36,10 +36,8 @@
         </article>
     </section>
 
-</body>
-
 <footer>
     <p>Dentnews AB 2021 &copy</p>
 </footer>
-
+</body>
 </html>
