--- a/code/index.html
+++ b/code/index.html
@@ -26,18 +26,21 @@
     </header>
 
     <section class="big-news">
+      <!-- <section class="container"> -->
       <!-- The big news content -->
-      <a href="article1.html"> <!--Add anchor to article page-->
-        <img src="photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
-        <div>
-          <p><span class="breaking-news">BREAKING NEWS</span></p> <!--Add span to style?-->
-          <h1>Dental clinics not affected by the new pandemic law.</h1>
-          <p>What you need to know regarding the new law.</p>
-        </div>
-      </a>
+        <a href="article1.html"> <!--Add anchor to article page-->
+           <img src="photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
+          <div>
+            <p><span class="breaking-news">BREAKING NEWS</span></p> <!--Add span to style?-->
+            <h1>Dental clinics not affected by the new pandemic law.</h1>
+            <p>What you need to know regarding the new law.</p>
+          </div>
+        </a>
+      <!-- </section> -->
     </section>
 
     <section class="news-container">
+      <!-- <section class="container"> -->
       <!-- The other news  -->
       <div class="news">
         <a href="article2.html"> <!--Add anchor to separate article page-->
@@ -111,10 +114,11 @@
           </div>
         </a>
       </div>
-
+    <!-- </section> -->
     </section>
+    
+    <footer>
+      <p>Dentnews AB 2021 &copy</p>
+    </footer>
   </body>
-  <footer>
-    <p>Dentnews AB 2021 &copy</p>
-  </footer>
 </html>
