--- a/code/article1.html
+++ b/code/article1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article 1</title>
+    <title>Breaking news</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -34,10 +34,8 @@
 
     </section>
 
-</body>
-
 <footer>
     <p>Dentnews AB 2021 &copy</p>
 </footer>
-
+</body>
 </html>
