--- a/code/article3.html
+++ b/code/article3.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Article 3</title>
+  <title>Invisalign</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -33,10 +33,8 @@
     </article>
   </section>
 
-</body>
-
 <footer>
   <p>Dentnews AB 2021 &copy</p>
 </footer>
-
+</body>
 </html>
