--- a/code/contact.html
+++ b/code/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
@@ -19,10 +19,9 @@
         </address>
     </section>
 
-</body>
-
 <footer>
     <p>Dentnews AB 2021 &copy</p>
 </footer>
-
+    
+</body>
 </html>
