Sticky nav and adjusted media queries

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
@@ -111,32 +113,64 @@
       </div>
 
       <div class="small-news-container">
-        <a href="">
-          <h3>TITLE</h3>
+        <a href="https://www.github.com">
+          <h3>The Git to the Hub</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </a>
       </div>
 
       <div class="small-news-container">
-        <a href="">
-          <h3>TITLE</h3>
+        <a href="https://www.canva.com/learn/best-professional-fonts-use-website/">
+          <h3>The best professional fonts to use for your website</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </a>
       </div>
 
       <div class="small-news-container">
-        <a href="">
-          <h3>TITLE</h3>
+        <a href="https://se.linkedin.com/jobs/frontend-developer-jobs?position=1&pageNum=0">
+          <h3>Find Work As A Front End Developer</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </a>
       </div>
 
       <div class="small-news-container">
-        <a href="">
-          <h3>TITLE</h3>
+        <a href="https://skillcrush.com/blog/skills-to-become-a-front-end-developer/">
+          <h3>Exactly What You Need To Know To Become A Front End Developer In 2021</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </a>
+      </div>
+
+      <div class="small-news-container">
+        <a href="https://www.github.com">
+          <h3>The Git to the Hub</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </a>
+      </div>
+
+      <div class="small-news-container">
+        <a href="https://www.canva.com/learn/best-professional-fonts-use-website/">
+          <h3>The best professional fonts to use for your website</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </a>
+      </div>
+
+      <div class="small-news-container">
+        <a href="https://se.linkedin.com/jobs/frontend-developer-jobs?position=1&pageNum=0">
+          <h3>Find Work As A Front End Developer</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </a>
+      </div>
+
+      <div class="small-news-container">
+        <a href="https://skillcrush.com/blog/skills-to-become-a-front-end-developer/">
+          <h3>Exactly What You Need To Know To Become A Front End Developer In 2021</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </a>
